# openapi.json
@@ -110,6 +110,360 @@
           }
         ]
       }
+    },
+    "/productos": {
+      "post": {
+        "tags": [
+          "productos"
+        ],
+        "summary": "This endpoint allows users to create products",
+        "requestBody": {
+          "description": "Product object that needs to be added to the store",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createProduct"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/createProduct"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "get": {
+        "tags": [
+          "productos"
+        ],
+        "summary": "This endpoint allows users to get products",
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/productos/{id}": {
+      "get": {
+        "tags": [
+          "productos"
+        ],
+        "summary": "This endpoint allows admin users to get products by id",
+        "description": "Product object that needs to get from the store",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getById"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/getById"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "productos"
+        ],
+        "summary": "This endpoint allows admin users to update products",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "productos"
+        ],
+        "summary": "This endpoint allows admin users to delete products",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/pedidos": {
+      "post": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "This endpoint allows users to create orders",
+        "requestBody": {
+          "description": "Product object that needs to be added to the store",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createPedidos"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/createPedidos"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "get": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "This endpoint allows admin users to get orders",
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/pedidos/{id}": {
+      "get": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "This endpoint allows admin users to get orders by id",
+        "description": "Product object that needs to get from the store",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/pedidosGetById"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/pedidosGetById"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "This endpoint allows admin users to update orders",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "This endpoint allows admin users to delete orders",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the product",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid input",
+            "content": {}
+          },
+          "500": {
+            "description": "Error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -134,25 +488,32 @@
         ],
         "properties": {
           "nombre": {
-            "type": "string"
+            "type": "string",
+            "example": "Ricardo"
           },
           "apellido": {
-            "type": "string"
+            "type": "string",
+            "example": "Ruben"
           },
           "usuario": {
-            "type": "string"
+            "type": "string",
+            "example": "ricardo_ruben"
           },
           "correoElectronico": {
-            "type": "string"
+            "type": "string",
+            "example": "mimail@xxxx.com"
           },
           "telefono": {
-            "type": "string"
+            "type": "string",
+            "example": "5555 5555"
           },
           "direccionDeEnvio": {
-            "type": "string"
+            "type": "string",
+            "example": "MI casa"
           },
           "clave": {
-            "type": "string"
+            "type": "string",
+            "example": "4lt4Cl2v3"
           },
           "isAdmin": {
             "type": "boolean"
@@ -170,14 +531,109 @@
         ],
         "properties": {
           "usuario": {
-            "type": "string"
+            "type": "string",
+            "example": "ricardo_ruben"
           },
           "clave": {
-            "type": "string"
+            "type": "string",
+            "example": "4lt4Cl2v3"
           }
         },
         "xml": {
           "name": "usuariosForLogin"
+        }
+      },
+      "createProduct": {
+        "type": "object",
+        "required": [
+          "nombre",
+          "precio",
+          "descripcion"
+        ],
+        "properties": {
+          "nombre": {
+            "type": "string",
+            "example": "Burga ATR"
+          },
+          "precio": {
+            "type": "number",
+            "example": "350"
+          },
+          "descripcion": {
+            "type": "string",
+            "example": "Hamburguesa con cheddar y panceta"
+          }
+        },
+        "xml": {
+          "name": "createProduct"
+        }
+      },
+      "getById": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "nombre": {
+            "type": "string",
+            "example": "Burga ATR"
+          },
+          "precio": {
+            "type": "number",
+            "example": "350"
+          },
+          "descripcion": {
+            "type": "string",
+            "example": "Hamburguesa con cheddar y panceta"
+          }
+        }
+      },
+      "createPedidos": {
+        "type": "object",
+        "required": [
+          "total",
+          "formaDePago",
+          "direccion"
+        ],
+        "properties": {
+          "total": {
+            "type": "number",
+            "example": "$500"
+          },
+          "formaDePago": {
+            "type": "string",
+            "example": "Efectivo"
+          },
+          "direccion": {
+            "type": "string",
+            "example": "MI casa"
+          }
+        }
+      },
+      "pedidosGetById": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "estado": {
+            "type": "string",
+            "example": "En Proceso"
+          },
+          "total": {
+            "type": "number",
+            "example": "500"
+          },
+          "formaDePago": {
+            "type": "string",
+            "example": "Efectivo"
+          },
+          "direccion": {
+            "type": "string",
+            "example": "Calle Buena Vida 123"
+          }
         }
       }
     }
